Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.6
  CHANGES:
    * Building the spectrum analyzer applet can now be disabled with a CMake
      argument.

  BUGFIXES:
    * Finally fix crash on startup in addCollapseAnimation. (BR 258741)
    * Don't hit "too many open files" when copying covers to iPod. (BR 301207)
    * Don't crash if iPod's eject button is hit twice. (BR 301208)
    * Don't crash even if the iPod is connected and quickly ejected. (BR 301166)

VERSION 2.6-Beta 1
  FEATURES:
    * Amazon store: improved album search
    * Support for transcoding when copying tracks to USB Mass Storage devices;
      per-device transcoding preference can be saved, too.
    * Provide Repopulate and Turn off link in "Dynamic Mode Enabled" bagde.
    * Support for setting cover images for albums on USB Mass Storage devices.
    * Support for setting and unsetting cover images for iPod albums, can
      write back covers to file meta-data too, respects configuration.
    * Amazon store: ability to check out an item directly without using the Amarok
      shopping cart. (BR 288808)
    * Amarok now includes the Free Music Charts service by default.
    * The maximum dimensions for embedded covers are now configurable. (BR 279493)
    * Small configuration dialog for iPods that shows troubleshooting information
      and allows to change iPod name.
    * Improved usability of iPod playlists: iPod collection automatically transfers
      tracks dropped to iPod playlists to iPod when it is needed.
    * Tracks can now be transcoded when transferring them to iPod. (BR 291722)
    * A diagnostic dialog reporting versions of Amarok, Qt, KDE and phonon libraries
      as well as the used phonon backend and status of plugins and scripts.
      Patch by Andrzej Hunt.
    * Ability to move track position bookmarks by dragging; patch by
      Jasneet Bhatti. (BR 214721)
    * Amarok can now remember whether and how to transcode tracks when